--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ var map = new naver.maps.Map('map', mapOptions); -->
         var infowindow = new naver.maps.InfoWindow({
             content: contentString
         });
+        
+        infowindow.open(map, marker);
     })();
     </script>
 </script>
