--- a/index.html
+++ b/index.html
@@ -52,17 +52,16 @@ var map = new naver.maps.Map('map', mapOptions); -->
       });
       
       var contentString = [
-                '<div class="iw_inner">',
-                '   <h3>'+name+'</h3>',
-                '   <a href="'+url+'" target="_blank">'+url+'</a>',
-                '</div>'
-            ].join('');
+            '<div class="iw_inner">',
+            '   <a href="'+url+'" target="_blank"><h3>'+name+'</h3></a>',
+            '</div>'
+        ].join('');
 
-        var infowindow = new naver.maps.InfoWindow({
-            content: contentString
-        });
+      var infowindow = new naver.maps.InfoWindow({
+        content: contentString
+      });
 
-        infowindow.open(map, marker);
+      infowindow.open(map, marker);
     })();
     </script>
 </script>
