--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@ var map = new naver.maps.Map('map', mapOptions); -->
       });
       
       var contentString = [
-            '<div class="iw_inner">',
-            '   <a href="'+url+'" target="_blank"><h3>'+name+'</h3></a>',
+            '<div class="iw_inner" style="margin: 0 50px;">',
+            '   <a href="'+url+'" target="_blank" style="text-decoration: none; color: inherit;"><h3>'+name+'</h3></a>',
             '</div>'
         ].join('');
 
